--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link active" href="#">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="page/acerca.html">Acerca de</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Productos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Contáctanos</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Ubicaciones</a></li>
+                    <li class="nav-item"><a class="nav-link" href="page/producto.html">Productos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="page/contactanos.html">Contáctanos</a></li>
+                    <li class="nav-item"><a class="nav-link" href="page/ubicación.html">Ubicaciones</a></li>
                 </ul>
             </div>
         </div>
