--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <link rel="stylesheet" href="css/index.css" />
 </head>
 <body>
-    <!-- Partículas -->
-    <div id="particles-js"></div>
 
-    <!-- Barra de navegación -->
+    <div id="particles-js"></div>
     <nav class="navbar navbar-expand-lg navbar-custom">
         <div class="container-fluid">
             <a class="navbar-brand ms-5" href="#">
@@ -33,7 +31,7 @@
         </div>
     </nav>
 
-    <!-- Contenido principal -->
+
     <div class="main-content">
         <div class="imagen-fondo">
             <img src="img/ind.jpg" alt="Decoración" />
@@ -41,26 +39,22 @@
         <h1 class="welcome-text">BIENVENIDO</h1>
         <div class="arrow-down" onclick="scrollToSection()">&#x25BC;</div>
     </div>
-
-    <!-- Sección de bienvenida -->
     <div id="bienvenida" class="seccion-bienvenida">
         <h1 class="welcome-title">¡Gracias por visitarnos!</h1>
         <div class="bienvenida-contenido">
             <p>
-                CHABELY COMPONENTES te da la bienvenida. 
+    
                 En nuestra empresa metalmecánica nos especializamos en brindar soluciones integrales a proyectos industriales, ofreciendo servicios con un enfoque en:
-                Calidad garantizada en cada proceso
-                Puntualidad en la entrega
-                Optimización de costos
-                Tecnología de punta
-                Personal técnico calificado y comprometido con la seguridad
-                Nos adaptamos a las necesidades de cada cliente, cumpliendo con altos estándares técnicos y brindando un servicio confiable, eficiente y competitivo en el mercado.
+                <br>Calidad garantizada en cada proceso.
+                <br>Puntualidad en la entrega.
+                <br>Optimización de costos.
+                <br>Tecnología de punta.
+                <br>Personal técnico calificado y comprometido con la seguridad.
+                <br>Nos adaptamos a las necesidades de cada cliente, cumpliendo con altos estándares técnicos y brindando un servicio confiable, eficiente y competitivo en el mercado.
                  </p>
             <img src="img/bi.jpg" alt="Imagen de bienvenida" class="bienvenida-imagen" />
         </div>
     </div>
-
-    <!-- Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
     <script src="js/index.js"></script>
